--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,8 +4,7 @@ FIND_PACKAGE(CUDA REQUIRED)
 FIND_PACKAGE(MPI REQUIRED)
 
 set(CMAKE_INSTALL_PREFIX $ENV{FOAM_USER_LIBBIN}/..)
-# set(PETSC_DIR "/home/runze/OpenFOAM/ThirdParty-7/platforms/linux64GccDPInt32/petsc-git")
-set(AMGX_DIR "/home/runze/AmgX/AMGX")
+set(AMGX_DIR $ENV{AMGX_DIR})
 set ( CUDA_ENABLE true )
 if ( CUDA_ENABLE )
     enable_language( CUDA )
